# adobepy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  live-host-smoke.yml  publish.yml  release.yml
bridges/cep/: tsconfig.json
bridges/cep/after-effects/: adobepy.config.js
bridges/cep/after-effects/CSXS/: manifest.xml
bridges/cep/after-effects/host/: dispatcher.jsx
bridges/cep/after-effects/src/: main.ts
bridges/cep/core/src/: protocol.ts  rpc.ts
bridges/cep/illustrator/: adobepy.config.js  index.html
bridges/cep/illustrator/CSXS/: manifest.xml
bridges/cep/illustrator/host/: dispatcher.jsx
bridges/cep/illustrator/src/: main.ts
bridges/uxp/: tsconfig.json
bridges/uxp/core/src/: errors.ts  host-adapter.ts  protocol.ts  rpc.ts  runtime.ts
bridges/uxp/indesign/: adobepy.config.js  manifest.json
bridges/uxp/indesign/src/: host.ts  main.ts
bridges/uxp/photoshop/: adobepy.config.js  manifest.json
bridges/uxp/photoshop/src/: host.ts  main.ts
bridges/uxp/premiere/: adobepy.config.js  manifest.json
bridges/uxp/premiere/src/: host.ts  main.ts
contracts/: adobepy_protocol_contract.json  dcc_mcp_photoshop_methods.json
crates/adobepy-broker/: Cargo.toml
crates/adobepy-broker/src/: lib.rs
crates/adobepy-cli/: Cargo.toml
crates/adobepy-cli/src/: main.rs
crates/adobepy-protocol/: Cargo.toml
crates/adobepy-protocol/src/: lib.rs
docs/: adobe-python-interpreter-design.md  api-sources.md  architecture.md  dcc-mcp-integration.md  dcc-mcp-photoshop-method-map.md  distribution.md  protocol.md  testing.md  usage.md
generators/: ir_to_python.py
generators/api_sources/: adobe_api_sources.json
generators/ir/: after-effects-mvp.json  illustrator-mvp.json  indesign-mvp.json  photoshop-mvp.json  premiere-mvp.json
python/adobe/: __init__.py
python/adobe/after_effects/: __init__.py  session.py  session.pyi
python/adobe/core/: __init__.py  capabilities.py  client.py  errors.py  session.py
python/adobe/dcc_mcp/: __init__.py
python/adobe/illustrator/: __init__.py  session.py  session.pyi
python/adobe/indesign/: __init__.py  session.py  session.pyi
python/adobe/photoshop/: __init__.py  session.py  session.pyi
python/adobe/premiere/: __init__.py  session.py  session.pyi
python/adobe/raw/: __init__.py
python/tests/: test_api_sources.py  test_architecture.py  test_core.py  test_dcc_mcp_integration.py  test_dcc_mcp_photoshop_method_map.py  test_distribution.py  test_facades.py  test_generator.py  test_replay_fixtures.py
python/tests/fixtures/replay/: illustrator_text_export.json  photoshop_active_layers.json
scripts/: build-cep.js  build-uxp.js  check-bridge-capabilities.js  check_architecture.py  check_generated_stubs.py  check_protocol_contract.py  check_wheel_compat.py  live_photoshop_smoke.py  package-release.ps1  replay_fixtures.py  report_api_coverage.py  run_python_tests.py  smoke_wheel_install.py  test-cep.js  test-uxp-bridge.js  test-uxpdt.js  uxpdt.js  validate_api_sources.py
