[package]
name = "adobepy-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "adobepy"
path = "src/main.rs"

[dependencies]
adobepy-broker = { path = "../adobepy-broker" }
adobepy-protocol = { path = "../adobepy-protocol" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
